# rusted-tools

./: Cargo.toml  README.md
d/: Cargo.toml
d/src/: main.rs
today/: Cargo.toml
today/src/: main.rs
yes/: Cargo.toml
yes/src/: main.rs
zeroc/: Cargo.toml
zeroc/src/: main.rs
zeroc/tests/: cli.rs
