[package]
name = "zeroc"
version = "0.1.0"
authors = ["Daniele Olmisani <mad4j@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.1"
